<resources>
    <string name="app_name">Good Games</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="title_button_download">BUY OR DOWNLOAD THIS GAME</string>
    <string name="creator_name">Daniel Anggi Permana</string>
    <string name="creator_email">danielanggipermana@gmail.com</string>
    <string name="logo_creator">Logo by @bagusfajardc</string>
    <string name="rate_title">Rate This App</string>
</resources>
